Optimize the code